syntax = "proto2";

package ostorlab.agent.message.proto.v3.asset.file.api_schema.graphql;

message AndroidMetadata {
  optional string package_name = 1;
}

message IOSMetadata {
  optional string bundle_id = 1;
}
message Message{
   optional bytes content = 1;
  optional string path = 2;
  optional string content_url = 3;
  oneof metadata_oneof {
    AndroidMetadata android_metadata = 4;
    IOSMetadata ios_metadata = 5;
  }
  optional string endpoint_url = 6;
  optional string schema_type = 7;
 }